# plasmid-priority

./: .commitlintrc.yml  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Justfile  LICENSE  Makefile  README.md  auc_experiment.py  config.yaml  dvc.yaml  flake.nix  mkdocs.yml  optimize.md  plan.md  proje.tar  pyproject.toml  setup_universal.sh  suggest.md  öneriler.md
.dvc/: config
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.omg/state/: intent.md  learn-watch.json  quota-watch.json  taskboard.md  workflow.md  workspace.json
config/: benchmarks.yaml  freeze_contract.yaml  import_contract_allowlist.txt  model_compute_tiers.yaml  performance_budgets.yaml  rag_corpus.yaml  research_models.yaml  scoring_weights.yaml
data/: external  raw  scores  silver
data/analysis/: adaptive_gated_metrics.tsv  adaptive_gated_predictions.tsv  amr_uncertainty_summary.tsv  amrfinder_concordance_detail.tsv  amrfinder_concordance_summary.tsv  amrfinder_probe_hits.tsv  amrfinder_probe_panel.tsv  annual_candidate_freeze_summary.tsv  assignment_confidence_summary.tsv  backbone_purity_atlas.tsv  blocked_holdout_calibration_metrics.tsv  blocked_holdout_calibration_summary.tsv  calibration_metrics.tsv  calibration_table.tsv  candidate_rank_stability.tsv  candidate_variant_consistency.tsv  card_gene_family_comparison.tsv  card_gene_support.tsv  card_group_summary.tsv  card_mechanism_comparison.tsv  coefficient_stability_cv.tsv  counterfactual_shortlist_comparison.tsv  country_missingness_bounds.tsv  country_missingness_sensitivity.tsv  country_quality_summary.tsv  country_upload_propensity.tsv  duplicate_completeness_change_audit.tsv  event_timing_outcomes.tsv  exposure_adjusted_event_outcomes.tsv  exposure_adjusted_outcome_audit.tsv  feature_dropout_importance.tsv  future_sentinel_audit.tsv  gate_consistency_audit.tsv  geographic_jump_distance_outcome.tsv  group_holdout_performance.tsv  incremental_value_over_baseline.tsv  knownness_audit_summary.tsv  knownness_matched_validation.tsv  knownness_stratified_performance.tsv  logistic_convergence_audit.tsv  (+48 more)
data/experiments/: README.md  adaptive_blend_search.tsv  adaptive_knownness_blend_search.tsv  adaptive_knownness_oof_blend_search.tsv  exploratory_poly_auc_check.py  knownness_deep_search.tsv  knownness_greedy_search.tsv  knownness_natural_model_search.tsv  registry.json  registry.tsv  tmp_model_search.tsv
data/manifests/: data_contract.json  data_locations.md
docs/: JURY_SUMMARY.md  benchmark_contract.md  cto_overview.md  data_card.md  disposition_ledger.md  index.md  investor_overview.md  model_card.md  product_strategy.md  scientific_overview.md  scientific_protocol.md
docs/runbooks/: ci_failure_triage.md  demo_path.md  deployment.md  jury_presentation.md  model_update.md  new_data_source.md  quality_scoreboard.md  release_verification.md  scientific_invariants.md  security.md
plans/: plasmid_priority_analysis_report.md
reports/: executive_summary.md  final_model_promotion_decision.md  final_model_promotion_summary.tsv  final_model_promotion_tokens.json  final_optimization_handoff.md  final_optimization_handoff.tsv  final_optimization_handoff_tokens.json  governance_closure_decision.md  governance_closure_summary.tsv  governance_next_step_token.json  governance_temporal_evidence.tsv  governance_temporal_recommendation.md  headline_validation_summary.md  health_dashboard.md  jury_brief.md  ozet_tr.md  phase_52_batch_winner.json  phase_52_gate_evaluation.tsv  phase_52_per_model_summary.tsv  phase_52_recommendation.md  phase_61_gate_evaluation.tsv  phase_61_per_model_summary.tsv  phase_61_recommendation.md  pitch_notes.md  report_provenance.json  tubitak_final_metrics.txt
reports/audits/: independent_audit_packet.json  independent_audit_packet.md  (+4 more)
scripts/: 00_fetch_external_data.py  01_check_inputs.py  02_build_all_plasmids_fasta.py  03_build_bronze_table.py  04_harmonize_metadata.py  05_deduplicate.py  06_annotate_mobility.py  07_annotate_amr.py  08_build_amr_consensus.py  09_assign_backbones.py  10_compute_coherence.py  11_compute_feature_T.py  12_compute_feature_H.py  13_compute_feature_A.py  14_build_backbone_table.py  15_normalize_and_score.py  16_run_module_A.py  17_run_module_B.py  18_run_module_C_pathogen_detection.py  19_run_module_D_external_support.py  20_run_module_E_amrfinder_concordance.py  21_run_validation.py  22_run_sensitivity.py  23_run_module_f_enrichment.py  24_build_reports.py  25_export_tubitak_summary.py  26_run_tests_or_smoke.py  27_generate_full_fit_predictions.py  27_run_advanced_audits.py  27b_run_advanced_audits.py  28_build_release_bundle.py  28_run_sovereign_ensemble.py  28b_run_sovereign_ensemble.py  29_build_experiment_registry.py  29_train_sovereign.py  30_train_ensemble.py  31_generate_scientific_contracts.py  32_freeze_and_invariants.py  33_scientific_equivalence.py  34_generate_disposition_ledger.py  (+36 more)
templates/: PRD.template.md
tests/: __init__.py  conftest.py  test_advanced_audits.py  test_advanced_audits_script.py  test_amrfinder_support.py  test_api_artifact_registry.py  test_api_security.py  test_artifact_cache.py  test_artifact_integrity_validation.py  test_ascension_core.py  test_audit_bugfixes.py  test_backbone.py  test_backbone_graph_clustering.py  test_build_reports_shim.py  test_canonical_metadata.py  test_ci_workflow.py  test_code_review_graph_guard.py  test_config.py  test_dedup.py  test_discovery_contract.py  test_embedding.py  test_enrichment.py  test_ensemble_strategies.py  test_epv_audit.py  test_evidence_claim_rules.py  test_experiment_gates.py  test_external_support.py  test_falsification_outcome_permutation.py  test_fasta.py  test_feature_pipeline_integration.py  test_feature_surface.py  test_features.py  test_figures.py  test_file_hash_cache.py  test_geography.py  test_governance_freeze.py  test_hardening_batch_1.py  test_hardening_batch_3.py  test_hardening_data_root.py  test_hardening_snapshot_cache.py  (+63 more)
(+407 files in other folders)
