[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plasmid-priority"
version = "0.3.0"
description = "Retrospective genomic surveillance prioritization for operational plasmid backbone classes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.5.1",
  "numpy>=2.0",
  "pandas>=2.2",
  "pandera>=0.20",
  "pydantic>=2.7",
  "pyyaml>=6",
  "scikit-learn>=1.5",
  "scipy>=1.13",
]

[project.optional-dependencies]
analysis = [
  "interpret>=0.7.8",
  "matplotlib>=3.10",
  "pyarrow>=16",
  "snakemake>=8",
]
dev = [
  "pytest>=8",
  "mypy>=1.10",
  "ruff>=0.4",
  "types-PyYAML>=6.0.12",
  "hypothesis>=6.100",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402", "E501"]
"tests/*.py" = ["E402", "E501"]
"src/plasmid_priority/reporting/enrichment.py" = ["E402", "E501"]
"src/plasmid_priority/reporting/model_audit.py" = ["E501"]
