[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plasmid-priority"
version = "0.3.0"
description = "Retrospective genomic surveillance prioritization for operational plasmid backbone classes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.5.1",
  "numpy>=2.0",
  "pandas>=2.2",
  "pandera>=0.20",
  "pydantic>=2.7",
  "pyyaml>=6",
  "scikit-learn>=1.5",
  "scipy>=1.13",
  "xlrd>=2.0.1",
]

[project.optional-dependencies]
analysis = [
  "interpret>=0.7.8",
  "matplotlib>=3.10",
  "networkx>=3.0",
  "pillow>=12.2.0",
  "pyarrow>=16",
  "shap>=0.44",
  "snakemake>=8",
]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=5",
  "pygments>=2.20.0",
  "mypy>=1.10",
  "ruff>=0.4",
  "pip-audit>=0.3",
  "pre-commit>=3.7",
  "commitizen>=3.0",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "types-PyYAML>=6.0.12",
  "pandas-stubs>=2.2",
  "hypothesis>=6.100",
]
api = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
]
tree-models = [
  "lightgbm>=4.0",
  "xgboost>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "plasmid_priority.validation.metrics",
    "plasmid_priority.validation.vif",
    "plasmid_priority.validation.boundaries",
]
strict = true
disallow_untyped_defs = true
no_implicit_reexport = true

[tool.pytest.ini_options]
addopts = "-x -q --tb=short"
testpaths = ["tests"]
markers = [
  "slow: marks tests as slow (deselect with '-m not slow')",
  "integration: marks integration tests requiring data",
]

[tool.coverage.run]
source = ["src/plasmid_priority"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "def __repr__",
]
fail_under = 80

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402", "E501"]
"tests/*.py" = ["E402", "E501"]
"src/plasmid_priority/reporting/enrichment.py" = ["E402", "E501"]
"src/plasmid_priority/reporting/model_audit.py" = ["E501"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
